2014-08-12  Ganesh Gopalasubramanian <Ganesh.Gopalasubramanian@amd.com>

	Backport from mainline
	2014-06-16  Ganesh Gopalasubramanian 
		    <Ganesh.Gopalasubramanian@amd.com>

	* config/i386/i386.c (ix86_expand_sse2_mulvxdi3): Issue
	instructions "vpmuludq" and "vpaddq" instead of "vpmacsdql" for
	handling 32-bit multiplication.

2014-08-08  Guozhi Wei  <carrot@google.com>

	* config/rs6000/rs6000.md (*movdi_internal64): Add a new constraint.

2014-08-07  Ilya Tocar  <ilya.tocar@intel.com>

	* config/i386/sse.md (vec_extract_lo_<mode><mask_name>): Fix
	constraint.

2014-08-06  Vladimir Makarov  <vmakarov@redhat.com>

	PR debug/61923
	* haifa-sched.c (advance_one_cycle): Fix dump.
	(schedule_block): Don't advance cycle if we are already at the
	beginning of the cycle.

2014-08-06  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/61320
	* tree-ssa-loop-ivopts.c (may_be_unaligned_p): Properly
	handle misaligned loads.

2014-08-04  Rohit  <rohitarulraj@freescale.com>

	PR target/60102
	* config/rs6000/rs6000.c
	(rs6000_reg_names): Add SPE high register names.
	(alt_reg_names): Likewise.
	(rs6000_dwarf_register_span): For SPE high registers, replace
	dwarf register numbers with GCC hard register numbers.
	(rs6000_init_dwarf_reg_sizes_extra): Likewise.
	(rs6000_dbx_register_number): For SPE high registers, return dwarf
	register number for the corresponding GCC hard register number.
	* config/rs6000/rs6000.h
	(FIRST_PSEUDO_REGISTER): Update based on 32 newly added GCC hard
	register numbers for SPE high registers.
	(DWARF_FRAME_REGISTERS):  Likewise.
	(DWARF_REG_TO_UNWIND_COLUMN): Likewise.
	(DWARF_FRAME_REGNUM): Likewise.
	(FIXED_REGISTERS): Likewise.
	(CALL_USED_REGISTERS): Likewise.
	(CALL_REALLY_USED_REGISTERS): Likewise.
	(REG_ALLOC_ORDER): Likewise.
	(enum reg_class): Likewise.
	(REG_CLASS_NAMES): Likewise.
	(REG_CLASS_CONTENTS): Likewise.
	(SPE_HIGH_REGNO_P): New macro to identify SPE high registers.

2014-08-01  Vladimir Makarov  <vmakarov@redhat.com>